--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm") version("1.3.71")
-    id("org.jetbrains.kotlin.plugin.serialization") version("1.3.71")
+    id("org.jetbrains.kotlin.jvm") version("1.3.72")
+    id("org.jetbrains.kotlin.plugin.serialization") version("1.3.72")
     id("java")
     id("maven-publish")
     id("maven")
@@ -9,7 +9,7 @@ plugins {
 }
 
 group "me.shedaniel"
-version "1.0.5"
+version "1.0.6"
 
 sourceCompatibility = targetCompatibility = 1.8
 
@@ -36,13 +36,14 @@ dependencies {
     compile("com.google.guava:guava:28.0-jre")
     compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
     compile("org.apache.commons:commons-lang3:3.9")
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.71")
-    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4")
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72")
+    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7")
     compile("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0")
-    compile("org.jetbrains.kotlin:kotlin-reflect:1.3.71")
+    compile("org.jetbrains.kotlin:kotlin-reflect:1.3.72")
+    compile("io.fastjson:boon:0.34")
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
-    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.3.71")
+    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.3.72")
 }
 
 compileKotlin {
