--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group "me.shedaniel"
-version "1.0.14"
+version "1.0.15"
 
 sourceCompatibility = targetCompatibility = 1.8
 
@@ -41,6 +41,7 @@ dependencies {
     compile("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0")
     compile("org.jetbrains.kotlin:kotlin-reflect:1.3.72")
     compile("io.fastjson:boon:0.34")
+    compile("ch.qos.logback:logback-classic:1.2.3")
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
     testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.3.72")
