--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-reflect:1.3.72")
     compile("io.fastjson:boon:0.34")
     compile("ch.qos.logback:logback-classic:1.2.3")
+    compile("org.dom4j:dom4j:2.1.3")
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
     testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.3.72")
