--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm") version("1.3.72")
-    id("org.jetbrains.kotlin.plugin.serialization") version("1.3.72")
+    id("org.jetbrains.kotlin.jvm") version("1.4.0")
+    id("org.jetbrains.kotlin.plugin.serialization") version("1.4.0")
     id("java")
     id("maven-publish")
     id("maven")
@@ -36,21 +36,24 @@ dependencies {
     compile("com.google.guava:guava:28.0-jre")
     compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
     compile("org.apache.commons:commons-lang3:3.9")
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72")
-    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7")
-    compile("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0")
-    compile("org.jetbrains.kotlin:kotlin-reflect:1.3.72")
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.0")
+    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9")
+    compile("org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.0-RC")
+    compile("org.jetbrains.kotlin:kotlin-reflect:1.4.0")
     compile("io.fastjson:boon:0.34")
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile("org.dom4j:dom4j:2.1.3")
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
-    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.3.72")
+    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.4.0")
 }
 
 compileKotlin {
     kotlinOptions.suppressWarnings = true
     kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        freeCompilerArgs = ["-Xinline-classes", "-Xopt-in=kotlin.RequiresOptIn"]
+    }
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
