--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile("io.fastjson:boon:0.34")
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile("org.dom4j:dom4j:2.1.3")
+    compile("net.fabricmc:stitch:0.4.6+build.74:all")
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
     testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.4.0")
