--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     compile("io.fastjson:boon:0.34")
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile("org.dom4j:dom4j:2.1.3")
-    compile("net.fabricmc:stitch:0.4.6+build.74:all")
+    compile("net.fabricmc:stitch:0.5.1+build.77") {
+        exclude group: "net.fabricmc", module: "tiny-mappings-parser"
+    }
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
     testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.4.0")
