--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ tasks.test {
 repositories {
     jcenter()
     mavenCentral()
+    mavenLocal()
     maven { url "https://maven.fabricmc.net" }
     maven { url "https://jitpack.io" }
     maven { url "https://dl.bintray.com/kotlin/kotlinx/" }
@@ -33,14 +34,12 @@ repositories {
 }
 
 dependencies {
-    compile("com.google.guava:guava:28.0-jre")
-    compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
-    compile("org.apache.commons:commons-lang3:3.9")
+    compile("me.shedaniel:tiny-parser:1.0.0")
+//    compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.0")
     compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9")
     compile("org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.0-RC")
     compile("org.jetbrains.kotlin:kotlin-reflect:1.4.0")
-    compile("io.fastjson:boon:0.34")
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile("org.dom4j:dom4j:2.1.3")
     compile("net.fabricmc:stitch:0.5.1+build.77") {
@@ -49,6 +48,9 @@ dependencies {
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
     testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.4.0")
+
+    compile("com.soywiz.korlibs.korio:korio:$korlibs_version")
+    compile("com.squareup.okio:okio-multiplatform:$okio_version")
 }
 
 compileKotlin {
