--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,7 @@ repositories {
 }
 
 dependencies {
-    compile("me.shedaniel:tiny-parser:1.0.0")
-//    compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
+    compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.0")
     compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9")
     compile("org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.0-RC")
