--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,13 @@ tasks.test {
 repositories {
     jcenter()
     mavenCentral()
-    mavenLocal()
-    maven { url "https://maven.fabricmc.net" }
+    maven { 
+        url "https://maven.fabricmc.net"
+        metadataSources {
+            it.mavenPom()
+            it.ignoreGradleMetadataRedirection()
+        }
+    }
     maven { url "https://jitpack.io" }
     maven { url "https://dl.bintray.com/kotlin/kotlinx/" }
     maven { url "https://dl.bintray.com/kotlin/kotlin-dev/" }
