--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Upload to Bintray
-        run: ./gradlew clean bintrayUpload
+        run: ./gradlew bintrayUpload
         env:
           BINTRAY_USER: shedaniel
           BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
