--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm") version("1.4.0")
-    id("org.jetbrains.kotlin.plugin.serialization") version("1.4.0")
+    id("org.jetbrains.kotlin.jvm") version("1.4.21")
+    id("org.jetbrains.kotlin.plugin.serialization") version("1.4.21")
     id("java")
     id("maven-publish")
     id("maven")
@@ -40,10 +40,10 @@ repositories {
 
 dependencies {
     compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.0")
-    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9")
-    compile("org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.0-RC")
-    compile("org.jetbrains.kotlin:kotlin-reflect:1.4.0")
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.21")
+    compile("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1")
+    compile("org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.1")
+    compile("org.jetbrains.kotlin:kotlin-reflect:1.4.21")
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile("org.dom4j:dom4j:2.1.3")
     compile("net.fabricmc:stitch:0.5.1+build.77") {
@@ -51,7 +51,7 @@ dependencies {
     }
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
-    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.4.0")
+    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.4.21")
 
     compile("com.soywiz.korlibs.korio:korio:$korlibs_version")
     compile("com.squareup.okio:okio-multiplatform:$okio_version")
