--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id("maven-publish")
     id("maven")
     id("signing")
-    id("com.jfrog.bintray") version("1.8.4")
 }
 
 group "me.shedaniel"
@@ -24,7 +23,6 @@ tasks.test {
 }
 
 repositories {
-    jcenter()
     mavenCentral()
     maven { 
         url "https://maven.fabricmc.net"
@@ -34,8 +32,7 @@ repositories {
         }
     }
     maven { url "https://jitpack.io" }
-    maven { url "https://dl.bintray.com/kotlin/kotlinx/" }
-    maven { url "https://dl.bintray.com/kotlin/kotlin-dev/" }
+    maven { url "https://dl.bintray.com/korlibs/korlibs/" }
 }
 
 dependencies {
@@ -80,24 +77,6 @@ task javadocsJar(type: Jar, dependsOn: javadocs) {
     from javadocs.destinationDir
 }
 
-bintray {
-    user = project.hasProperty("bintrayUser") ? project.property("bintrayUser") : System.getenv("BINTRAY_USER")
-    key = project.hasProperty("bintrayApiKey") ? project.property("bintrayApiKey") : System.getenv("BINTRAY_KEY")
-    publications = ["publication"]
-    publish = true
-    pkg {
-        repo = "linkie"
-        name = "linkie-core"
-        userOrg = "shedaniel"
-        licenses = ["GPL-3.0"]
-        version {
-            gpg {
-                sign = true
-            }
-        }
-    }
-}
-
 publishing {
     publications {
         publication(MavenPublication) {
@@ -108,5 +87,14 @@ publishing {
     }
 
     repositories {
+        if (System.getenv("MAVEN_PASS") != null) {
+            maven {
+                url = "https://deploy.shedaniel.me/"
+                credentials {
+                    username = "shedaniel"
+                    password = System.getenv("MAVEN_PASS")
+                }
+            }
+        }
     }
 }
