--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,8 @@
-okio_version=2.9.0
-korlibs_version=2.0.0-rc2
+kotlin.mpp.stability.nowarn=true
+
+kotlin_version=1.5.0-RC
+kotlin_serialization_version=1.1.0
+okio_version=2.10.0
+korlibs_version=2.0.10
+kotlin_logging_version=1.12.5
+ktor_version=1.5.3
