--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 kotlin.mpp.stability.nowarn=true
 
-kotlin_version=1.5.0-RC
+kotlin_version=1.5.0
 kotlin_serialization_version=1.1.0
 okio_version=2.10.0
-korlibs_version=2.0.10
+korlibs_version=2.1.1
 kotlin_logging_version=1.12.5
 ktor_version=1.5.3
