--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ repositories {
         }
     }
     maven { url "https://jitpack.io" }
+    maven { url "https://maven.shedaniel.me" }
 }
 
 dependencies {
@@ -51,6 +52,7 @@ dependencies {
 
     compile("com.soywiz.korlibs.korio:korio:$korlibs_version")
     compile("com.squareup.okio:okio-multiplatform:$okio_version")
+    compile("me.shedaniel.quiltmc:mappings-hasher:1.0.1")
 }
 
 compileKotlin {
