Improve query performance

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile("com.soywiz.korlibs.korio:korio:$korlibs_version")
     compile("com.squareup.okio:okio-multiplatform:$okio_version")
     compile("org.quiltmc:mappings-hasher:1.1.1:all")
+    compile("com.google.guava:guava:31.1-jre")
 }
 
 compileKotlin {
