--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm") version("1.6.10")
-    id("org.jetbrains.kotlin.plugin.serialization") version("1.6.10")
+    id("org.jetbrains.kotlin.jvm") version("1.7.10")
+    id("org.jetbrains.kotlin.plugin.serialization") version("1.7.10")
     id("java")
     id("maven-publish")
-    id("maven")
     id("signing")
 }
 
@@ -39,9 +38,9 @@ repositories {
 
 dependencies {
     compile("com.github.Chocohead:Tiny-Mappings-Parser:d96d4070293d9e7054693c21552eb1eb2b149679")
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.10")
-    compile("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
-    compile("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
+    compile("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0")
+    compile("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
     compile("ch.qos.logback:logback-classic:1.2.3")
     compile("org.dom4j:dom4j:2.1.3")
     compile("net.fabricmc:stitch:0.5.1+build.77") {
@@ -49,7 +48,7 @@ dependencies {
     }
 
     testCompile("org.junit.jupiter:junit-jupiter:5.6.2")
-    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.4.21")
+    testCompile("org.jetbrains.kotlin:kotlin-test-junit5:1.7.10")
 
     compile("com.soywiz.korlibs.korio:korio:$korlibs_version")
     compile("com.squareup.okio:okio-multiplatform:$okio_version")
@@ -57,6 +56,14 @@ dependencies {
     compile("com.google.guava:guava:31.1-jre")
     compile("net.fabricmc:tiny-remapper:0.8.6")
     compile("org.quiltmc:quiltflower:1.8.0")
+}
+
+def compile(str, closure = {}) {
+    dependencies.api(str, closure)
+}
+
+def testCompile(str, closure = {}) {
+    dependencies.testApi(str, closure)
 }
 
 compileKotlin {
